force-app/main/default/objects/AnaliseDeCredito__c/AnaliseDeCredito__c.object-meta.xml
<CustomObject>
    <label>Análise de Crédito</label>
    <nameField>
        <displayFormat>AC-{0000000000}</displayFormat>
        <label>Nome</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Análises de Crédito</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>