force-app/main/default/objects/AnaliseDeCredito__c/fields/AnosFGTS__c.field-meta.xml
<CustomField>
    <fullName>AnosFGTS__c</fullName>
    <label>3 Anos de FGTS?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>