force-app/main/default/objects/AnaliseDeCredito__c/fields/Assessoria_de_Credito__c.field-meta.xml
<CustomField>
    <fullName>Assessoria_de_Credito__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessoria de Crédito</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Analises_de_creditos</relationshipName>
    <type>Lookup</type>
</CustomField>