force-app/main/default/objects/AnaliseDeCredito__c/fields/Banco__c.field-meta.xml
<CustomField>
    <fullName>Banco__c</fullName>
    <label>Banco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Banco</valueSetName>
    </valueSet>
</CustomField>