force-app/main/default/objects/AnaliseDeCredito__c/fields/ConsultaNEOWAY__c.field-meta.xml
<CustomField>
    <fullName>ConsultaNEOWAY__c</fullName>
    <label>Consulta NEOWAY</label>
    <type>TextArea</type>
</CustomField>