force-app/main/default/objects/AnaliseDeCredito__c/fields/ConsultaSERASA__c.field-meta.xml
<CustomField>
    <fullName>ConsultaSERASA__c</fullName>
    <label>Consulta SERASA</label>
    <type>TextArea</type>
</CustomField>