force-app/main/default/objects/AnaliseDeCredito__c/fields/ConsultaSPC__c.field-meta.xml
<CustomField>
    <fullName>ConsultaSPC__c</fullName>
    <label>Consulta SPC</label>
    <type>TextArea</type>
</CustomField>