force-app/main/default/objects/AnaliseDeCredito__c/fields/Data_e_Hora_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Data_e_Hora_Inicio__c</fullName>
    <inlineHelpText>Indica a hora de início da análise.</inlineHelpText>
    <label>Data e Hora Início</label>
    <type>DateTime</type>
</CustomField>