force-app/main/default/objects/AnaliseDeCredito__c/fields/Data_e_Hora_Termino__c.field-meta.xml
<CustomField>
    <fullName>Data_e_Hora_Termino__c</fullName>
    <inlineHelpText>Indica a hora do término da análise.</inlineHelpText>
    <label>Data e Hora Término</label>
    <type>DateTime</type>
</CustomField>