force-app/main/default/objects/AnaliseDeCredito__c/fields/DataDaAnalise__c.field-meta.xml
<CustomField>
    <fullName>DataDaAnalise__c</fullName>
    <label>Data da analise</label>
    <type>Date</type>
</CustomField>