force-app/main/default/objects/AnaliseDeCredito__c/fields/Financiamento_Liberado__c.field-meta.xml
<CustomField>
    <fullName>Financiamento_Liberado__c</fullName>
    <label>% Financiamento Liberado</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>