force-app/main/default/objects/AnaliseDeCredito__c/fields/JustificativaReanalise__c.field-meta.xml
<CustomField>
    <fullName>JustificativaReanalise__c</fullName>
    <description>Detalhamento e justificativa da área de Vendas, referente a correções das pendências identificadas pela área de crédito.</description>
    <inlineHelpText>Detalhamento e justificativa da área de Vendas, referente a correções das pendências identificadas pela área de crédito.</inlineHelpText>
    <label>Justificativa Reanálise</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>