force-app/main/default/objects/AnaliseDeCredito__c/fields/Parecer_Final__c.field-meta.xml
<CustomField>
    <fullName>Parecer_Final__c</fullName>
    <label>Parecer Final</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>