force-app/main/default/objects/AnaliseDeCredito__c/fields/ParecerDoCredito__c.field-meta.xml
<CustomField>
    <fullName>ParecerDoCredito__c</fullName>
    <description>avaliação final e descritiva da análise de crédito.</description>
    <label>Detalhes Parecer do Crédito</label>
    <type>TextArea</type>
</CustomField>