force-app/main/default/objects/AnaliseDeCredito__c/fields/QtdAnalisesRealizadas__c.field-meta.xml
<CustomField>
    <fullName>QtdAnalisesRealizadas__c</fullName>
    <inlineHelpText>Indica a quantidade de análises realizadas pela área de crédito.</inlineHelpText>
    <label>Qtd de Análises Realizadas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>