force-app/main/default/objects/AnaliseDeCredito__c/fields/Relatorio__c.field-meta.xml
<CustomField>
    <fullName>Relatorio__c</fullName>
    <label>Relatório</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>