force-app/main/default/objects/AnaliseDeCredito__c/fields/Renda_Liquida_Total__c.field-meta.xml
<CustomField>
    <fullName>Renda_Liquida_Total__c</fullName>
    <label>Renda Liquida - Total</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>