force-app/main/default/objects/AnaliseDeCredito__c/fields/RendaBruta__c.field-meta.xml
<CustomField>
    <fullName>RendaBruta__c</fullName>
    <label>Renda Bruta</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>