force-app/main/default/objects/AnaliseDeCredito__c/fields/RendaLiquida__c.field-meta.xml
<CustomField>
    <fullName>RendaLiquida__c</fullName>
    <label>Renda Líquida</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>