force-app/main/default/objects/AnaliseDeCredito__c/fields/SaldoFGTS__c.field-meta.xml
<CustomField>
    <fullName>SaldoFGTS__c</fullName>
    <label>Saldo FGTS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>