force-app/main/default/objects/AnaliseDeCredito__c/fields/ScoreSerasa__c.field-meta.xml
<CustomField>
    <fullName>ScoreSerasa__c</fullName>
    <label>Score Serasa</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>