force-app/main/default/objects/AnaliseDeCredito__c/fields/Tempo_Total_Analise__c.field-meta.xml
<CustomField>
    <fullName>Tempo_Total_Analise__c</fullName>
    <label>Tempo Total Análise</label>
    <type>Time</type>
</CustomField>