force-app/main/default/objects/AnaliseDeCredito__c/fields/Tipo_da_Venda__c.field-meta.xml
<CustomField>
    <fullName>Tipo_da_Venda__c</fullName>
    <label>Tipo da Venda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Associativo</fullName>
            </value>
            <value>
                <fullName>SFH</fullName>
            </value>
            <value>
                <fullName>Venda a vista</fullName>
            </value>
            <value>
                <fullName>Venda Direta</fullName>
            </value>
            <value>
                <fullName>Venda Direta c/ FGTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>