force-app/main/default/objects/AnaliseDeCredito__c/fields/TipoDeRenda__c.field-meta.xml
<CustomField>
    <fullName>TipoDeRenda__c</fullName>
    <label>Tipo de Renda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assalariado</fullName>
            </value>
            <value>
                <fullName>Autônomo</fullName>
            </value>
            <value>
                <fullName>Sócio</fullName>
            </value>
            <value>
                <fullName>Proprietário</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>