force-app/main/default/objects/AnaliseDeCredito__c/fields/Valro_Financiamento_Aprovado__c.field-meta.xml
<CustomField>
    <fullName>Valro_Financiamento_Aprovado__c</fullName>
    <label>Valor Financiamento Aprovado</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>